--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   path_provider: ^2.1.0
   install_plugin_v3: ^3.1.3
   json_annotation: ^4.5.0
+  dio_mock_interceptor: ^2.1.0
   
 dev_dependencies:
   flutter_test:
@@ -96,6 +97,7 @@ flutter:
   uses-material-design: true
 
   assets:
+   - mock/
    - assets/images/
   #   - images/a_dot_ham.jpeg
 
